--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/DBMS?useSSL=false
-spring.datasource.username=ashok
-spring.datasource.password=Anshul@123
-server.port=8888
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/cfc5RS7ZCp?useSSL=false
+spring.datasource.username=cfc5RS7ZCp
+spring.datasource.password=BQ31DtDabA
+#server.port=8888
 
